# blendings

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
Demos/: Demo1.otherware  Demo2.otherware  Glass Circuit.otherware  demo2.otherware
Source/: AppTheme.cpp  AppTheme.h  AudioRobustnessSmoke.cpp  CarouselEditorComponent.cpp  CarouselEditorComponent.h  CarouselSmoke.cpp  EmbeddedScAudioEngine.cpp  EmbeddedScAudioEngine.h  GridEditorComponent.cpp  GridEditorComponent.h  GridInterpreter.cpp  GridInterpreter.h  GridModel.cpp  GridModel.h  InspectorStyle.h  Main.cpp  MusicalObjectEditorComponent.cpp  MusicalObjectEditorComponent.h  OrbitsElement.cpp  OrbitsElement.h  PdAudioEngine.cpp  PdAudioEngine.h  PdPatchEditor.html  PipeToolSettings.h  PipeWorkspaceComponent.cpp  PipeWorkspaceComponent.h  PipeWorkspaceSmoke.cpp  ProjectRecoverySmoke.cpp  ScAudioSmoke.cpp  ScDiscAudioEngine.cpp  ScDiscAudioEngine.h  ScSheetFormula.cpp  ScSheetFormula.h  ScSheetMath.cpp  ScSheetMath.h  ScSheetScore.cpp  ScSheetScore.h  ScSheetTableComponent.cpp  ScSheetTableComponent.h  SuperColliderTokeniser.cpp  (+4 more)
Tests/: AudioRobustnessSmoke.cpp  CarouselSmoke.cpp
Tests/Fixtures/: README.md
docs/: ARCHITECTURE.md
scripts/: check_repository_hygiene.cmake  pd_editor_roundtrip_test.js
